add empathy_tp_chat_get_self_contact()

https://bugzilla.gnome.org/show_bug.cgi?id=622118